# ChangeLog for dev-ruby/protected_attributes
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/protected_attributes/ChangeLog,v 1.7 2015/03/11 16:54:30 ago Exp $

  11 Mar 2015; Agostino Sarubbo <ago@gentoo.org>
  protected_attributes-1.0.7.ebuild, protected_attributes-1.0.8.ebuild:
  Add ~x86, wrt bug #508836

*protected_attributes-1.0.8 (17 Jun 2014)

  17 Jun 2014; Hans de Graaff <graaff@gentoo.org>
  +protected_attributes-1.0.8.ebuild:
  Version bump. Support forthcoming versions of Rails.

  02 May 2014; Hans de Graaff <graaff@gentoo.org>
  protected_attributes-1.0.7.ebuild:
  Add ruby20, ruby21.

  27 Apr 2014; Hans de Graaff <graaff@gentoo.org>
  -protected_attributes-1.0.3.ebuild, -protected_attributes-1.0.5.ebuild:
  Cleanup.

*protected_attributes-1.0.7 (27 Mar 2014)

  27 Mar 2014; Hans de Graaff <graaff@gentoo.org>
  +protected_attributes-1.0.7.ebuild:
  Version bump.

*protected_attributes-1.0.5 (13 Feb 2014)

  13 Feb 2014; Hans de Graaff <graaff@gentoo.org>
  +protected_attributes-1.0.5.ebuild:
  Version bump.

*protected_attributes-1.0.3 (09 Oct 2013)

  09 Oct 2013; Hans de Graaff <graaff@gentoo.org>
  +protected_attributes-1.0.3.ebuild, +metadata.xml:
  Initial import for Rails 4. This code was extracted into a separate package
  from Rails 3. It is also a dependency for dev-ruby/fast_gettext.