@@ -1,26 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST protected_attributes-1.0.7.tar.gz 22493 SHA256 3ef74da24abd1a8c6a56d7594200a5e124c6ce81216d6ffc17123539c4e6373f SHA512 bf3c5358fc2fc338f031e73e49467d028f32b8aec6b197c3b8cc68ff84e6e7e04e4b7e948e6b6b5ab779016c3209f3df707a4a7a3876a16ad98e2f4c4be8f208 WHIRLPOOL 2d197470b1759ca8941841b84dbded1b31d0cc2926ad4838b939ef3e1714b150195c6bae283f6c4ff7c11357bd40f237b6d786f88f5f2a9bc28798be068b67c4
 DIST protected_attributes-1.0.8.tar.gz 21600 SHA256 b6b26c552b6e7e45a479961ff31bf628c793621bb933d57ddbedd3b24d477959 SHA512 bf09e97347949362a5ca7b3532fa133b44ae0555e3b5bd676978a769d2b29dc4dad47cb5e48daa6b71b8120b41b33ff2466b6b81e1d97a8af17018c518c837cc WHIRLPOOL f9fcbfa85bd595bda30ab800a9f4b6d382ed73b60ffe655418d09dc6590b5c5328673202115cbd02dc2791c9c39370d4bdfd2d6cfd7381e5a561ee3e93b7daae
-EBUILD protected_attributes-1.0.7.ebuild 931 SHA256 338d740d3ec763e5ed732c29f57b086805a7485b34a83d4843e4d422b7e448d3 SHA512 94492f562dc4d745b93d8f9c8b4b2db8fd4bd9875dba78db4462237e5ecd44761394d42be8c1941f5310c84eb7425168988e722cdbe62ecf59bf28561f26b7e3 WHIRLPOOL ca03ad731732798143242dd9c03a144fab6e1187f14c0dcc5e96b49ae0ebc3d78b22127b4467a6eb37562efe7e7cf1ec53d79b1a026d26394073b312ddd2e7ea
 EBUILD protected_attributes-1.0.8.ebuild 960 SHA256 5bd8b76eda51891f23449bd2ee4a328546d3fa6c658cdea8184f478d64797ec0 SHA512 7f215ae81cb29061b483252fbbe88fd6c714c80d0599cb663e1658db66944b6574706127ca7261b5c493cb8c6912fd912d612c5793188f9408e05de56a0c71b4 WHIRLPOOL 873306c0cbb4ee5ceb01693b056cc2613b61909e3750a85eb3d2bd200fda1dbaa0e30ffc2691f5a3a0f536a8da0bde50ffb5674950b9a39a7fed81791e9b8380
-MISC ChangeLog 1398 SHA256 8b061001ce31ad7bdeb8ea658fc00e710abbafbada46a6fea83af5c232a047f7 SHA512 e8de93e409242eaaa5cdfa5146b9b14561b91454b0d3ef9127238a014c196fc2c5e23c0c40c7f83b8ddf45d6ba8863d08850fe76eb32373ecc56dcc5f44f4a44 WHIRLPOOL 75b98d1496e96c5d384e56177a49f217c5609530cbce35d39e33ed3ae03266a18071fa984edca8569a40614c0c5def03b0b298ee5a747e84329a43c8dd3a4c3f
+MISC ChangeLog 1501 SHA256 3efcd92f7ee857578d6290f33d69c718fd79f34af6d6ae1f141443bcb7bc1252 SHA512 882087437ea539e90864caf0d298dd3cf3086ff977152b6d72c4707f5f22ace14da5a40839ec5c300410d953782dfacba89d82c00dd2284a2241cb3572870c85 WHIRLPOOL f067cec25de652044dd1919da8761c04ebb5ac60141641a455cd779514db8ddcf9967939eb5daf72ed5f303d4cf2f89abb0e8ffb34f79e6d14680eb680e95865
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVAHNHAAoJELp701BxlEWfo4UP/ig3ZRsFcdYCweNKgYl2M7ie
-iDUKqDHrbJQR5Nl1nJEC4zE9u4omdQe1SBbzcNg8gkAecqhU//+cEgWOXKaPghU0
-hONfUCoKaA+BdhbOISqByVjZChqnCsYhHd3V5FNa2omdscH1H50E/9BNTQBQ0hlJ
-XhiSqxCXI+3WKhgAAqRoTnKb7oQADec6y/KW5fuNgYsIYe6RsmQs9CZqZJVWEu+L
-DYEGfigFcDIJ9vtAAZ1syASviKVFUWpW8KuZ7d4LYKl76a90LIBslRjVlTafnEhU
-+dDfi5gAei+zcA2J/tctyuuwQ9g9Hz5DXObNZGs4SS7cN6rR3dj878I5ZPO5KkUo
-fELVspWiLrzY632FtqkO8D/EaZqzLfr20lR6R7h3xSCs3/iKH0gns8bkZ6hRwMEy
-w1SyIbaFL2ZCTPmUYnDUTXHOuxWPiy8YDWeD3WpQTMa7Ji+ocb3v2397xPkoti7H
-5QUyB2Z0mWegTiV4SY1TfZyBBUG1HnQCxUmflAHgUXvTFG13OxcTeKk/Bq5ePz7s
-OSdGUqfHwfestw5wDJi9/m6xX9yze1FOlMY1ch8r45oQWLtzKm/UM1H7yGIU73d6
-x6a0iTF16adnXGuUdqSniXmSvb/Q+f3a+n4Rj3mXy1Y3QEZuLnRMqHnex87QsY5B
-XNtfeNFvLQKsZ91QIMRv
-=7eSw
+iF4EAREIAAYFAlUJFUQACgkQiIP6VqMIqNd1vAD+JVNdaP5wHol3cbCXEQKjSUHh
+8LlGLF9avszz7JczDPMA/1PbhXyVYyVu8Dq8xfp+NL2okrsafEUSAy8DVo4NeKJh
+=j88b
 -----END PGP SIGNATURE-----
