@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/protected_attributes
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/protected_attributes/ChangeLog,v 1.7 2015/03/11 16:54:30 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/protected_attributes/ChangeLog,v 1.8 2015/03/18 06:03:43 graaff Exp $
+
+  18 Mar 2015; Hans de Graaff <graaff@gentoo.org>
+  -protected_attributes-1.0.7.ebuild:
+  Cleanup.
 
   11 Mar 2015; Agostino Sarubbo <ago@gentoo.org>
   protected_attributes-1.0.7.ebuild, protected_attributes-1.0.8.ebuild:
